# llproxy

./: .env.example  LICENSE  README.md  pyproject.toml
src/backend/: config.py  database.py  main.py
src/backend/api/: __init__.py
src/backend/api/routes/: __init__.py  logs.py  proxy.py  settings.py
src/backend/dependencies/: __init__.py  database.py  logging.py
src/backend/schemas/: __init__.py  logs.py  openai.py  settings.py
src/backend/services/: logging_service.py
src/backend/utils/: __init__.py  get_env.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/components/: conversation-view.tsx  copy-button.tsx  help-modal.tsx  metadata-view.tsx  response-format-card.tsx
src/frontend/src/components/layout/: layout.tsx  sidebar.tsx
src/frontend/src/components/ui/: dialog.tsx
src/frontend/src/lib/: api.ts  model-color.ts  time.ts
src/frontend/src/pages/: dashboard.tsx  log-detail.tsx  logs.tsx  settings.tsx  tracings.tsx
src/frontend/src/types/: index.ts
